<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--标题-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/title_writeTag"
            android:text="@string/title_writeTag"
            android:textSize="50px"
            android:textColor="@color/black"/>
        <!--分割线-->
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#66CCFF"/>

    </LinearLayout>

    <!--读标签-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_label_TID"
            android:text="@string/read_label"
            android:textSize="20dp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="0dp"
            android:gravity="center"
            android:id="@+id/tv_read_TID"
            android:textSize="20dp"
            android:hint="@string/TID"/>

        <Button
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_read_TID"
            android:text="@string/btn_read_TID"/>

    </LinearLayout>

    <!--写标签-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_write_TID"
            android:text="@string/write_label"
            android:textSize="20dp"
            android:textColor="@color/black"/>

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="0dp"
            android:gravity="center"
            android:id="@+id/et_write_TID"
            android:textSize="20dp"
            android:hint="@string/write_TID"/>

        <Button
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_write_TID"
            android:text="@string/btn_write_TID"/>

    </LinearLayout>


</LinearLayout>