<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainActivity">

    <!--第一行-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <!--第一行第一个-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:ignore="NestedWeights,UselessParent">

            <ImageButton
                android:id="@+id/imageButton_writeTag"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/img_writetag"
                android:scaleType="fitCenter"
                android:background="@color/white" />

            <TextView
                android:id="@+id/textView_writeTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:text="@string/writeTag" />

        </LinearLayout>

        <!--第一行二个-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:ignore="NestedWeights,UselessParent">

            <ImageButton
                android:id="@+id/imageButton_history"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/img_history"
                android:scaleType="fitCenter"
                android:background="@color/white" />

            <TextView
                android:id="@+id/textView_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:text="@string/history" />

        </LinearLayout>

    </LinearLayout>

    <!--第二行-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <!--第二行第一个-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:ignore="NestedWeights,UselessParent">

            <ImageButton
                android:id="@+id/imageButton_ckpd"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/img_ckpd"
                android:scaleType="fitCenter"
                android:background="@color/white" />

            <TextView
                android:id="@+id/textView_ckpd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:text="@string/ckpd" />

        </LinearLayout>

        <!--第二行二个-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:ignore="NestedWeights,UselessParent">

            <ImageButton
                android:id="@+id/imageButton_xdpd"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/img_xdpd"
                android:scaleType="fitCenter"
                android:background="@color/white" />

            <TextView
                android:id="@+id/textView_xdpd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:text="@string/xdpd" />

        </LinearLayout>

    </LinearLayout>

    <!--第三行-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        <!--第三行第一个-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:ignore="NestedWeights,UselessParent">

            <ImageButton
                android:id="@+id/imageButton_fcpd"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/img_fcpd"
                android:scaleType="fitCenter"
                android:background="@color/white" />

            <TextView
                android:id="@+id/textView_fcpd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:text="@string/fcpd" />

        </LinearLayout>

        <!--第三行二个-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:ignore="NestedWeights,UselessParent">

            <ImageButton
                android:id="@+id/imageButton_gkpd"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/img_gkpd"
                android:scaleType="fitCenter"
                android:background="@color/white" />

            <TextView
                android:id="@+id/textView_gkpd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:text="@string/gkpd" />

        </LinearLayout>

    </LinearLayout>

    <!--介绍-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_SetPower"
                    android:text="@string/setPower"
                    android:textSize="23sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <Spinner
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:id="@+id/Ssno_sp_positions"
                    android:spinnerMode="dialog"/>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#66CCFF"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:id="@+id/develop"
                android:text="@string/developer"
                android:textSize="30px"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:id="@+id/about"
                android:text="@string/about"
                android:textSize="30px"
                android:textColor="@color/black"/>

    </LinearLayout>

</LinearLayout>